--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -40,12 +40,12 @@
 </div>
 <div class="clear"></div>
   <div class="booyah-box col-xs-10 col-xs-offset-1"> 
-  <h1>The Best of Monterey | <small>Off the Beaten Path</small></h1>
+  <h1>The Best of Monterey | <small>Hidden Gems</small></h1>
   <br class="clr"/>
 <hr />
 <!-- Places -->
 <% @places.each do |place| %>
-  <div class="booyah-box col-xs-10"> 
+<!--   <div class="booyah-box col-xs-10">  -->
 	<div class="col-sm-8 col-xs-12">
 	  <h2><%= link_to place.name, place_path(place) %></h2>
 	  <br />
@@ -72,7 +72,7 @@
 	  </div>
 	  </div>
 	  <% end %>
-  </div>
+<!--   </div> -->
 <% end %>
 </div>
 
