--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -45,7 +45,7 @@
 <hr />
 <!-- Places -->
 <% @places.each do |place| %>
-<!--   <div class="booyah-box col-xs-10">  -->
+<!-- <div class="places-index booyah-box col-xs-12">  -->
 	<div class="col-sm-8 col-xs-12">
 	  <h2><%= link_to place.name, place_path(place) %></h2>
 	  <br />
@@ -72,7 +72,7 @@
 	  </div>
 	  </div>
 	  <% end %>
-<!--   </div> -->
+<!-- </div>  -->
 <% end %>
 </div>
 
