Edit map page text

--- a/app/views/places/map.html.erb
+++ b/app/views/places/map.html.erb
@@ -52,11 +52,11 @@ function initMap() {
 <br/>
 <br/>
   <p>
-  View stunning coastline and sweeping vistas, play a world-class round of golf, enjoy gourmet cuisine. But, don't forget to check out some of these gems along the way. Need a sandwich for your hike? A chill bar to play a game of darts? Check out these places off the beaten path and take refuge from crowds of summer tourists.
+  With stunning coastlines and sweeping vistas, world-class golf courses, and gourmet cuisine-- there's no shortage of things to do. Don't forget to check out some of these hidden gems along the way. Need a sandwich for your hike? A chill bar to play a game of darts? We'll help you find what you need.
     </p>
   <br/>
   <p>
-  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. 
+  And if you don't see your place here or you know of a place that you'd like to add, you can        <%= link_to 'create a new place', new_place_path %>.
 </p>
 </div> 
 <br class="clr" />
