--- a/app/views/places/map.html.erb
+++ b/app/views/places/map.html.erb
@@ -48,7 +48,7 @@ function initMap() {
 
 <div class="map-page-text col-xs-8 col-xs-offset-2"> 
 
-<h2>Like What You See?</h2>
+<h2>Explore with Gemster</h2>
 <br/>
 <br/>
   <p>
@@ -60,5 +60,5 @@ function initMap() {
 </p>
 </div> 
 <br class="clr" />
-<div class="clear"/> <!-- pushes footer to bottom -->
+<div class="clear"/> </div><!-- pushes footer to bottom -->
 
