--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -26,11 +26,55 @@
   border:10px;
 }
 
+.place-booyah-box {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  // background: url('/assets/white_sand.png');
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  border-radius: 5px;
+  // margin-top:30px;
+  // margin-bottom:30px;
+  // margin-left:30px;
+  // margin-right:30px;
+  // padding-left:15px;
+  border:10px;
+}
 
+.place-title {
+  // position: relative;
+  background: rgba(20,60,40,0.6);
+  border: 10px solid #339966;
+  horizontal-align: center;
+  vertical-align: center;
+  // background: url('/assets/white_sand.png');
+  // border-bottom: 10px solid #339966;
+  // z-index: 1;
+  //   opacity: 0.5;
+
+}
+.place-title h1 {
+// position: relative;
+  background: white;
+  // margin-left: 10px;
+  padding: 20px;
+  // color: #2a2a2a;
+  border-radius: 5px;
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  border-radius: 5px;
+  // z-index: 0;
+
+}
 .col-xs-12, .col-sm-4 {
 padding-left: 0px;
 padding-right: 0px;
-margin-bottom: 35px;
+// margin-bottom: 35px;
 }
 
 .col-xs-12, .col-sm-8 {
