--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -107,12 +107,16 @@ function initMap() {
 <!--   <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
   Add a comment
   </button> -->
-
-<div class="photos">
-  <h1 class="photos pull-left">Photos</h1>
+  <div class="place-title"> 
+  <h1><%=@place.name%> Photos</h1>
+  </div>
+ <!--  <br class="clr"/> -->
+<div class="place-booyah-box col-xs-12"> 
+<!-- <div class="photos">
+  <h1 class="photos pull-left">Photos</h1> -->
  <div class="clear"></div>
  <% @place.photos.each do |photo| %>
- <div class="col-xs-12 col-sm-4">
+ <div class="col-xs-12 col-sm-3 col-xs-offset-1">
     <div class="place-photo">
       <%= image_tag photo.picture, :class => 'img-responsive' %> 
     </div>
@@ -126,11 +130,18 @@ function initMap() {
       
 <div class="clear"></div>
 <!-- <div class="col-xs-10 col-xs-offset-1"> -->
-<div class="comments">
+<!-- <div class="comments"> -->
 
-  <h1 class="comments pull-left">Comments</h1>
+<!--   <h1 class="comments pull-left">Comments</h1> -->
+  <div class="place-title">
+  <h1>Visitor Comments</h1>
+    </div>
+  <br class="clr"/>
+
+    <div class="place-booyah-box col-xs-12"> 
+<hr />
   <div class="clear"></div>
-
+  <div class="col-xs-10 col-xs-offset-1"></div>
 <% @place.comments.each do |comment| %>
   <div class="col-xs-12 col-sm-6">
     <blockquote>
