Remove Profile link in nav tab

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -248,7 +248,8 @@ a {
   text-decoration: none;
 }
 a:hover {
-  color: #54c697;
+  // color:  #54c697;
+  color: #339966;
   text-decoration: underline;
 }
 
