--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,9 @@
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to 'Locations', map_path %></li>
+          <li><%= link_to 'All Places  ', map_path %></li>
           <% if user_signed_in? %>
-            <li><%= link_to 'My Profile', user_path(current_user) %></li>
+<!--             <li><%= link_to 'My Profile', user_path(current_user) %></li> -->
             <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
           <% else %>
             <li><%= link_to 'Sign in', new_user_session_path %></li>
