--- a/app/views/places/map.html.erb
+++ b/app/views/places/map.html.erb
@@ -71,15 +71,15 @@ function initMap() {
 
 <div class="map-page-text col-xs-8 col-xs-offset-2"> 
 
-<h2>Explore with Gemster</h2>
+<h2>Where will you explore next?</h2>
 <br/>
 <br/>
   <p>
-  With stunning coastlines and sweeping vistas, world-class golf courses, and gourmet cuisine-- there's no shortage of things to do. Don't forget to check out some of these hidden gems along the way. Need a sandwich for your hike? A chill bar to play a game of darts? We'll help you find what you need.
+  With stunning coastlines and sweeping vistas, world-class golf courses, and gourmet cuisine-- there's no shortage of things to do. Don't forget to check out some of these hidden gems along the way. Need a sandwich for your hike? A fun and relaxing bar to play a game of darts? We'll help you find what you need.
     </p>
   <br/>
   <p>
-  And if you don't see your place here or you know of a place that you'd like to add, you can        <%= link_to 'create a new place', new_place_path %>.
+  And if you don't see your place here or there's place that you'd like to add, contribute to Gemster and <%= link_to 'create a new place', new_place_path %>.
 </p>
 </div> 
 
