--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -40,7 +40,7 @@
 </div>
 <div class="clear"></div>
   <div class="booyah-box col-xs-10 col-xs-offset-1"> 
-  <h1>The Best of Monterey | <small>Hidden Gems</small></h1>
+  <h1>The Best of Monterey | <small>Discover its Hidden Gems</small></h1>
   <br class="clr"/>
 <hr />
 <!-- Places -->
