--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -116,7 +116,7 @@ function initMap() {
   <h1 class="photos pull-left">Photos</h1> -->
  <div class="clear"></div>
  <% @place.photos.each do |photo| %>
- <div class="col-xs-12 col-sm-3 col-xs-offset-1">
+ <div class="col-xs-12 col-sm-4">
     <div class="place-photo">
       <%= image_tag photo.picture, :class => 'img-responsive' %> 
       <%= photo.caption %>
