--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,15 +1,6 @@
 .places-index.booyah-box.col-xs-12 {
-  //   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  // -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  // box-shadow: 1px 1px 2px 0 #d0d0d0;
-  // background: #fff;
-  // border: 1px solid #ccc;
-  // border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  // border-radius: 5px;
   margin-top:30px;
   margin-bottom:30px;
-  // padding:15px;
-  // border:10px;
 }
 
 .booyah-box {
@@ -30,51 +21,27 @@
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
-  // background: url('/assets/white_sand.png');
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   border-radius: 5px;
-  // margin-top:30px;
-  // margin-bottom:30px;
-  // margin-left:30px;
-  // margin-right:30px;
-  // padding-left:15px;
   border:10px;
 }
 
 .place-title {
-  // position: relative;
   background: rgba(20,60,40,0.6);
   border: 10px solid #339966;
   horizontal-align: center;
   vertical-align: center;
-  // background: url('/assets/white_sand.png');
-  // border-bottom: 10px solid #339966;
-  // z-index: 1;
-  //   opacity: 0.5;
-
 }
 .place-title h1 {
-// position: relative;
   background: white;
-  // margin-left: 10px;
   padding: 20px;
-  // color: #2a2a2a;
-
-  // -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  // -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  // box-shadow: 1px 1px 2px 0 #d0d0d0;
+  border-radius: 5px;
   background: #fff;
-  // border: 1px solid #ccc;
-  // border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  // border-radius: 5px;
-  // z-index: 0;
-
 }
 .col-xs-12, .col-sm-4 {
 padding-left: 0px;
 padding-right: 0px;
-// margin-bottom: 35px;
 }
 
 .col-xs-12, .col-sm-8 {
@@ -84,26 +51,9 @@ margin-bottom: 35px;
 }
 
 .header-box {
-//   // -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
-//   // -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-//   // box-shadow: 1px 1px 2px 0 #d0d0d0;
-//   background: #fff;
-//   border: 1px solid #ccc;
-//   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-//   border-radius: 5px;
   margin-top:120px;
   margin-left: 50px;
-//   margin-bottom:5px;
-//   padding:15px;
-//   border:10px;
  }
-
-// .booyah-box h1 {
-//   font-size: 22px;
-//   text-align: left;
-//   margin: 0;
-//   padding: 0;
-// }
 
 .header-box h1 {
   font-size: 52px;
@@ -122,7 +72,6 @@ body {
 .navbar.navbar-inverse {
 	background: url('/assets/noisy_net.png');
 	border-radius: 0;
-	//border-bottom: 2px solid #339966;
 	margin-bottom: 0;
   font-size: 18px;
 }
@@ -145,7 +94,6 @@ button.btn.btn-primary.pull-right {
     background-color: #337ab7;
     border-color: #2e6da4;
     margin-top: 20px;
-    // vertical-align: center;
 }
 .field_with_errors {
 	color: #ff3333;
@@ -164,13 +112,6 @@ button.btn.btn-primary.pull-right {
 	clear: both;
 }
 
-// h1 {
-//   font-family: montserratultra_light, Arial, sans-serif;
-//   font-size: 36px;
-//   text-align: center;
-//   //padding-top: 50px;
-//   padding-bottom: 30px;
-// }
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
@@ -193,7 +134,6 @@ blockquote p {
 .photoframe {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
 	-webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-	// box-shadow: 1px 1px 2px 0 #d0d0d0;
 	background: #fff;
 	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
 	margin-top:0px;
@@ -212,7 +152,6 @@ blockquote p {
 
 .carousel {
   background-color: rgba(0,0,0,0.1);
- // margin-bottom: 50px; 
 }   
 
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {    
@@ -248,7 +187,6 @@ a {
   text-decoration: none;
 }
 a:hover {
-  // color:  #54c697;
   color: #339966;
   text-decoration: underline;
 }
@@ -276,7 +214,6 @@ div.pagination ul {
   display: inline;
 }
 .pagination a {
-  //float: left;
   padding: 5px 14px;
   line-height: 34px;
   text-decoration: none;
@@ -314,11 +251,8 @@ div.pagination ul {
 .pagination-centered {
   text-align: center;
 }
-// .pagination-right {
-//   text-align: right;
-// }
+
 .comments {
-  // background-color: #339966;
   background: url('stardust.png');
   margin-top: 40px;
   margin-bottom: 10px;
@@ -338,20 +272,10 @@ h1.photos.pull-left {
   margin-left: 20px;
 }
 
-// div.places-index-header-container {
-// background: url('/assets/noisy_net.png');
-// background-color: rgba(0,0,0,0.5);
-// height: 25px;
-// box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-// box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-// }
-
 h1 {
   color: #595959;
-  // margin-left: 0px;
   font-family: montserratultra_light, Arial, sans-serif;
   font-size: 48px;
-  //font-weight: bold;
 }
 
 h3 {
@@ -384,8 +308,8 @@ img.img-responsive {
     height: 300px;
     width: 100%;
 }
+
 .map-page-text{
-  // margin-top: 50px;
   margin-left: 200px;
   margin-right: 200px;
   margin-bottom: 100px;
@@ -403,15 +327,6 @@ img.img-responsive {
 p {
   font-size: 18px;
 }
-// .location-header-container {
-//   margin-top: 50px;
-// }
-
-// .btn-primary {
-//   margin-top: 30px;
-//   // margin-bottom: 60px;
-
-// }
 
 .photos {
   background-color: #339966;
@@ -425,7 +340,6 @@ p {
   background: #fff;
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  // border-radius: 5px;
   margin-top:0px;
   margin-bottom:90px;
   padding:15px;
