--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -11,19 +11,19 @@
       <div class="item active">
         <%= image_tag 'slider1.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-<!--         Big Sur Beaches -->
+        Big Sur Beaches
       </div>
     </div>
     <div class="item">
       <%= image_tag 'slider3.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-<!--         Monterey Bay Aquarium -->
+        Monterey Bay Aquarium
       </div>
     </div>
     <div class="item">
       <%= image_tag 'slider5.jpg', class: 'img-responsive'  %>
       <div class="carousel-caption">
-<!--         Redwood Forests -->
+        Redwood Forests
       </div>
   </div>
 
