--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -59,7 +59,11 @@
     <% if place.comments.present? %>
   		<blockquote>
     	  <% if place.comments.first.humanized_rating.present? %>
-      		<b><%= place.comments.first.humanized_rating %></b> -
+      		<% place.comments.first.humanized_rating.times do %>
+            <%= content_tag :div, class: 'gem-image-inline' do %>
+              <img src='/assets/gem6.png' alt="gem" height="22" width="22">
+            <% end %>
+          <% end %>
     	  <% end %>
           <%= place.comments.first.message %>
           <small><%= place.comments.first.user.email %></small>
