--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -28,7 +28,7 @@
 }
 
 .place-title {
-    background: #f9f9f9;
+  background: white;
   border-left: 10px solid #ccc;
   border-radius: 5px;
   margin: 1.5em 10px;
@@ -69,7 +69,7 @@ h1, h2, h3, h4 {
 }
 
 body {
-	background: #00ff00 url('paper_1.png'); 
+	background: url('/assets/paper_1.png'); 
 	font-family: montserratultra_light, Arial, sans-serif;
 }
 .navbar.navbar-inverse {
@@ -348,6 +348,7 @@ p {
   padding:15px;
   border:10px;
 }
+
 .gem-image-inline {
   display: inline-block;
 }
