--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -146,9 +146,13 @@ function initMap() {
   <div class="col-xs-12 col-sm-6">
     <blockquote>
       <% if comment.humanized_rating.present? %> 
-      <b><%= comment.humanized_rating %></b> -
-      <% end %>
-         <%= comment.message %>
+        <% comment.humanized_rating.times do %>
+          <%= content_tag :div, class: 'gem-image-inline' do %>
+            <img src='/assets/gem6.png' alt="gem" height="22" width="22">
+          <% end %>
+        <% end %>
+      <% end %> 
+         - <%= comment.message %>
       <small><%= comment.user.email %></small>
     </blockquote>
   </div>
