--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -61,7 +61,7 @@
     	  <% if place.comments.first.humanized_rating.present? %>
       		<% place.comments.first.humanized_rating.times do %>
             <%= content_tag :div, class: 'gem-image-inline' do %>
-              <img src='/assets/gem6.png' alt="gem" height="22" width="22">
+              <img src='/assets/gem6.png' >
             <% end %>
           <% end %>
     	  <% end %>
