Fix gems on index page

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -32,7 +32,7 @@
   margin: 1.5em 10px;
   padding: 0.5em 10px;
   border-top-left-radius: 5px;
-  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .place-title h1 {
