--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,8 +63,8 @@
     <!-- Global-Footer -->
   <footer class="global-footer">
       <ul class="font-monthairline">
-          <li><a href="#" class="color-white hover-orange global-hovertransition">Privacy Policy</a></li>
-          <li><a class="color-white hover-orange global-hovertransition" href="#">Terms of Service</a></li>
+          <li><a href="#" class="color-white hover-orange global-hovertransition">About Us</a></li>
+          <li><a class="color-white hover-orange global-hovertransition" href="#">Contact</a></li>
       </ul>
   </footer>
 </div>
