--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,4 +1,4 @@
-<div class="booyah-box col-xs-12">
+<div class="booyah-box col-xs-10 col-xs-offset-1">
 <div class="place-info">
   <h1><%= @place.name %></h1>
   <i><%= @place.address %></i>
@@ -152,7 +152,7 @@ function initMap() {
           <% end %>
         <% end %>
       <% end %> 
-         - <%= comment.message %>
+         -<%= comment.message %>
       <small><%= comment.user.email %></small>
     </blockquote>
   </div>
