--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -27,19 +27,35 @@
 }
 
 .place-title {
-  background: white;
-  border-left: 10px solid #ccc;
-  margin: 1.5em 10px;
-  padding: 0.5em 10px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  // background: white;
+  // border-left: 10px solid #ccc;
+  // margin: 1.5em 10px;
+  // padding: 0.5em 10px;
+  // border-top-left-radius: 5px;
+  // border-top-right-radius: 5px;
+    -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: #f9f9f9;
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  // border-radius: 5px;
+  margin-top:30px;
+  margin-bottom:30px;
+  padding:15px;
+  // border-bottom:10px solid gray;
+   border-top-left-radius: 5px;
+   border-top-right-radius: 5px;
 }
 
 .place-title h1 {
   background: white;
+  color: gray;
   padding: 20px;
-  border-radius: 5px;
-  background: #fff;
+     border-top-left-radius: 5px;
+   border-top-right-radius: 5px;
+  // border-radius: 5px;
+
 }
 
 .col-xs-12, .col-sm-4 {
@@ -117,8 +133,8 @@ button.btn.btn-primary.pull-right {
 
 blockquote {
   background: #f9f9f9;
-  // border-left: 10px solid #ccc;
-  // border-radius: 5px;
+  border-left: 10px solid #ccc;
+  border-radius: 5px;
   margin: 1.5em 10px;
   padding: 0.5em 10px;
   // quotes: "\201C""\201D""\2018""\2019";
@@ -297,14 +313,18 @@ img.img-responsive {
   vertical-align: center;
 }
 .place-photo {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
   position: relative;
   display: block;
+  border: 10px solid #f9f9f9;
   background-color: white;
-  padding-left: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  // padding-left: 10px;
+  // padding-top: 10px;
+  // padding-right: 10px;
   border-radius: 0px;
-  margin: 20px;
+  margin: 5px;
 }
 
 .carousel {
@@ -356,4 +376,8 @@ p {
   display: inline-block;
   height: 22px;
   width: 22px;
+}
+
+div.bulletin-board.col-xs-10.col-xs-offset-1 {
+
 }
