--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -102,7 +102,7 @@ function initMap() {
   </div>
 </div>
 
-<!-- <div class="col-xs-10 col-xs-offset-1"> -->
+<div class="bulletin-board col-xs-10 col-xs-offset-1">
   <!-- Button trigger modal -->
 <!--   <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
   Add a comment
@@ -125,7 +125,7 @@ function initMap() {
 
   <% end %> 
   </div>
-<!-- </div> -->
+</div>
 
       
 <div class="clear"></div>
