Remove place title

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -107,9 +107,9 @@ function initMap() {
 <!--   <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
   Add a comment
   </button> -->
-  <div class="place-title"> 
+<!--   <div class="place-title"> 
   <h1><%=@place.name%> Photos</h1>
-  </div>
+  </div> -->
  <!--  <br class="clr"/> -->
 <div class="place-booyah-box col-xs-12"> 
 <!-- <div class="photos">
