--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -17,14 +17,14 @@
   border:10px;
 }
 
-.place-booyah-box {
-  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  box-shadow: 1px 1px 2px 0 #d0d0d0;
-  border: 1px solid #ccc;
-  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  border:10px;
-}
+// .place-booyah-box {
+//   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+//   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+//   box-shadow: 1px 1px 2px 0 #d0d0d0;
+//   border: 1px solid #ccc;
+//   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+//   border:10px;
+// }
 
 .place-title {
   // background: white;
@@ -33,12 +33,17 @@
   // padding: 0.5em 10px;
   // border-top-left-radius: 5px;
   // border-top-right-radius: 5px;
-    -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  box-shadow: 1px 1px 2px 0 #d0d0d0;
-  background: #f9f9f9;
-  border: 1px solid #ccc;
-  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+    background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  border-radius: 5px;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  //   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  // -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  // box-shadow: 1px 1px 2px 0 #d0d0d0;
+  // background: #f9f9f9;
+  // border: 1px solid #ccc;
+  // border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   // border-radius: 5px;
   margin-top:30px;
   margin-bottom:30px;
@@ -49,7 +54,7 @@
 }
 
 .place-title h1 {
-  background: white;
+  // background: white;
   color: gray;
   padding: 20px;
      border-top-left-radius: 5px;
