--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -43,10 +43,11 @@
   <div class="booyah-box col-xs-10 col-xs-offset-1"> 
   <h1>The Best of Monterey | <small>Off the Beaten Path</small></h1>
   <br class="clr"/>
-<hr />
+<!-- <hr /> -->
 <!-- Places -->
 <% @places.each do |place| %>
-<!-- <div class="places-index booyah-box col-xs-12">  -->
+<div class="places-index col-xs-12">
+<hr />
 	<div class="col-sm-8 col-xs-12">
 	  <h2><%= link_to place.name, place_path(place) %></h2>
 	  <br />
@@ -76,12 +77,11 @@
 	  <%= image_tag place.photos.last.picture %>
 	  </div>
 	  </div>
-	  <% end %>
-<!-- </div>  -->
+
+	  <% end %> 
+</div> 
 <% end %>
 </div>
-
-
 <div class="clear"></div>
 <div class="pagination-centered">
   <ul>
