--- a/app/views/places/map.html.erb
+++ b/app/views/places/map.html.erb
@@ -1,5 +1,5 @@
 <div>
-<div class="map-box col-xs-12">
+<div class="booyah-box col-xs-10 col-xs-offset-1">
   <div class="map-title">
   <h1>Monterey Locations |<small> Treasure Map</small></h1>
   <br/>
