Style ratings and reviews sections

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -62,11 +62,11 @@
     	  <% if place.comments.first.humanized_rating.present? %>
       		<% place.comments.first.humanized_rating.times do %>
             <%= content_tag :div, class: 'gem-image-inline' do %>
-            <img src='/assets/gem6.png' alt="gem" height="22" width="22">
+            <img src='/assets/gem2.png' alt="gem" height="22" width="22">
             <% end %>
           <% end %>
     	  <% end %>
-          <%= place.comments.first.message %>
+          - <%= place.comments.first.message %>
           <small><%= place.comments.first.user.email %></small>
   	    </blockquote>
    <% end %>
