--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,13 +1,13 @@
-.places-index.booyah-box.col-xs-12 {
-  margin-top:10px;
-  margin-bottom:10px;
-}
+// .places-index.booyah-box.col-xs-12 {
+//   margin-top:10px;
+//   margin-bottom:10px;
+// }
 
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
-  background: #fff;
+  background: #f9f9f9;
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   border-radius: 5px;
@@ -34,9 +34,9 @@
   // border-top-left-radius: 5px;
   // border-top-right-radius: 5px;
     background: #f9f9f9;
-  border-left: 10px solid #ccc;
+  // border-left: 10px solid #ccc;
   border-radius: 5px;
-  margin: 1.5em 10px;
+  // margin: 1.5em 10px;
   padding: 0.5em 10px;
   //   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   // -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -55,7 +55,7 @@
 
 .place-title h1 {
   // background: white;
-  color: gray;
+  color: #595959;
   padding: 20px;
      border-top-left-radius: 5px;
    border-top-right-radius: 5px;
@@ -143,7 +143,7 @@ button.btn.btn-primary.pull-right {
 }
 
 blockquote {
-  background: #f9f9f9;
+  background: #ececec;
   border-left: 10px solid #ccc;
   border-radius: 5px;
   margin: 1.5em 10px;
@@ -164,7 +164,7 @@ blockquote p {
 .photoframe {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
 	-webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-	background: #fff;
+	background: #f9f9f9;
 	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
 	margin-top:0px;
 	margin-bottom:0px;
@@ -247,7 +247,7 @@ div.pagination ul {
   padding: 5px 14px;
   line-height: 34px;
   text-decoration: none;
-  background-color: #ffffff;
+  background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-left-width: 0;
   border-radius: 5px;
@@ -265,7 +265,7 @@ div.pagination ul {
 .pagination .disabled a:hover {
   color: #2a2a2a;
   cursor: default;
-  border: 3px solid #FFFFFF;
+  border: 3px solid #f9f9f9;
 }
 
 .pagination li:first-child a {
@@ -303,6 +303,20 @@ h1.photos.pull-left {
   margin-left: 20px;
 }
 
+.reviews {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: #f9f9f9;
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  border-radius: 5px;
+  margin-top:30px;
+  margin-bottom:30px;
+  padding:15px;
+  border:10px;
+}
+
 h1 {
   color: #595959;
   font-family: montserratultra_light, Arial, sans-serif;
@@ -329,12 +343,13 @@ img.img-responsive {
   box-shadow: 1px 1px 2px 0 #d0d0d0;
   position: relative;
   display: block;
-  border: 10px solid #f9f9f9;
-  background-color: white;
-  // padding-left: 10px;
-  // padding-top: 10px;
-  // padding-right: 10px;
-  border-radius: 0px;
+  // border: 10px solid #f9f9f9;
+  background-color: #f9f9f9;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 50px;
+  border-radius: 5px;
   margin: 5px;
 }
 
@@ -350,7 +365,7 @@ img.img-responsive {
   margin-left: 200px;
   margin-right: 200px;
   margin-bottom: 100px;
-  background-color: #ffffff;
+  background-color: #f9f9f9;  
   horizontal-align: center;
   padding: 20px;
   border-radius: 5px;
@@ -374,7 +389,7 @@ p {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
-  background: #fff;
+  background: #f9f9f9;
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   margin-top:0px;
