--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -129,13 +129,14 @@ function initMap() {
 
       
 <div class="clear"></div>
-<!-- <div class="col-xs-10 col-xs-offset-1"> -->
+<div class="reviews col-xs-10 col-xs-offset-1">
 <!-- <div class="comments"> -->
 
 <!--   <h1 class="comments pull-left">Comments</h1> -->
   <div class="place-title">
-  <h1>Visitor Comments</h1>
+  <h1>Ratings and Reviews</h1>
     </div>
+    <hr />
   <br class="clr"/>
 
     <div class="place-booyah-box col-xs-12"> 
@@ -147,16 +148,16 @@ function initMap() {
       <% if comment.humanized_rating.present? %> 
         <% comment.humanized_rating.times do %>
           <%= content_tag :div, class: 'gem-image-inline' do %>
-            <img src='/assets/gem6.png' alt="gem" height="22" width="22">
+            <img src='/assets/gem2.png' alt="gem" height="22" width="22">
           <% end %>
         <% end %>
       <% end %> 
-         -<%= comment.message %>
+         - <%= comment.message %>
       <small><%= comment.user.email %></small>
     </blockquote>
   </div>
 
 <% end %>
   </div>
-<!--   </div> -->
+</div>
  <div class="clear"></div>
