--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -41,7 +41,7 @@
 
 <div class="clear"></div>
   <div class="booyah-box col-xs-10 col-xs-offset-1"> 
-  <h1>The Best of Monterey | <small>Off the Beaten Path</small></h1>
+  <h1>The Best of Monterey | <small>On and Off the Beaten Path</small></h1>
   <br class="clr"/>
 <!-- <hr /> -->
 <!-- Places -->
@@ -62,7 +62,7 @@
     	  <% if place.comments.first.humanized_rating.present? %>
       		<% place.comments.first.humanized_rating.times do %>
             <%= content_tag :div, class: 'gem-image-inline' do %>
-            <img src='/assets/gem2.png' alt="gem" height="22" width="22">
+            <img src='/assets/gem8.png' alt="gem" height="22" width="22">
             <% end %>
           <% end %>
     	  <% end %>
