--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,8 +65,8 @@
     <!-- Global-Footer -->
   <footer class="global-footer">
       <ul class="font-monthairline">
-          <!-- <li><a href="" class="color-white hover-orange global-hovertransition">About Us</a></li>
-          <li><a class="color-white hover-orange global-hovertransition" href="#">Contact</a></li> -->
+          <li><a href="" class="color-gray hover-orange global-hovertransition">About Us</a></li>
+          <li><a class="color-gray hover-orange global-hovertransition" href="#">Contact</a></li> -->
 
         <%= link_to 'About Us', team_path %>
         <br />
