--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,166 +1,166 @@
-<div class="booyah-box col-xs-10 col-xs-offset-1">
-<div class="place-info">
-  <h1><%= @place.name %></h1>
-  <i><%= @place.address %></i>
-  <br/><br/>
-  <p><%= @place.description %></p>
-  </div>
-<% if @place.latitude.present? && @place.longitude.present? %>
 
-    <script>
+  <div class="booyah-box col-xs-10 col-xs-offset-1">
+    <div class="place-info">
+      <h1><%= @place.name %></h1>
+      <i><%= @place.address %></i>
+      <br/><br/>
+      <p><%= @place.description %></p>
+    </div>
+    <% if @place.latitude.present? && @place.longitude.present? %>
 
-function initMap() {
-  var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+      <script>
 
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 12,
-    center: myLatLng
-  });
+      function initMap() {
+        var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
 
-  var infowindow = new google.maps.InfoWindow();
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 12,
+          center: myLatLng
+        });
 
-  var marker = new google.maps.Marker({
-    position: myLatLng,
-    map: map,
-    title: "<%=@place.name %>"
-  });
-  google.maps.event.addListener(marker, 'click', function() { 
-       infowindow.setContent(marker.title); 
-       infowindow.open(map, this);
-    }); 
-    return marker;  
-}
+        var infowindow = new google.maps.InfoWindow();
 
-    </script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>
-<div id="map"></div>
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
-  Add a comment
-  </button>
+        var marker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+          title: "<%=@place.name %>"
+        });
+        google.maps.event.addListener(marker, 'click', function() { 
+             infowindow.setContent(marker.title); 
+             infowindow.open(map, this);
+          }); 
+          return marker;  
+      }
 
-<% end %>
-<br />
-  <div class="pull-left">
-  	<% if current_user && current_user == @place.user %>
-      <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal-photo">
-      Add a photo
+      </script>
+      <script async defer
+              src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap">
+      </script>
+    <div id="map"></div>
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+      Add a comment
       </button>
-  		<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-  		<%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
-  	<% end %>
-  </div>
-</div>
 
-<div class="clear"></div>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal-photo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="myModalLabel-photo">Add a Photo</h4>
-      </div>
-      <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
-        <div class="modal-body">
-          <%= f.input :picture %>
-          <%= f.input :caption %>
-        </div>
-      <div class="modal-footer">
-         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-         <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
-      </div>
- <% end %>
-
-
+    <% end %>
+    <br />
+    <div class="pull-left">
+      <% if current_user && current_user == @place.user %>
+        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal-photo">
+          Add a photo
+        </button>
+      	<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+      	<%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
+      <% end %>
     </div>
-  </div>
-</div>
-<div class="clear"></div>
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
-      </div>
-<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-  <div class="modal-body">
-	<%= f.input :message %>
-	<%= f.input :rating, as: :select, collection: Comment::RATINGS %>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-    <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
     </div>
+    // <!-- 
+    // <div class="clear"></div> -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal-photo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="myModalLabel-photo">Add a Photo</h4>
+          </div>
+          <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+            <div class="modal-body">
+              <%= f.input :picture %>
+              <%= f.input :caption %>
+            </div>
+          <div class="modal-footer">
+             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+             <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+          </div>
      <% end %>
 
-  </div>
-<!--   </div>
- --></div>
-<div class="clear"></div>
+
+        </div>
+      </div>
+    </div>
+    <!-- <div class="clear"></div> -->
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
+          </div>
+    <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+      <div class="modal-body">
+    	<%= f.input :message %>
+    	<%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+        </div>
+         <% end %>
+
+      </div>
+    <!--   </div>
+     --></div>
+    <!-- <div class="clear"></div> -->
 
 
 
-</div>
+    </div>
 
-      
-<div class="clear"></div>
-<div class="reviews col-xs-10 col-xs-offset-1">
-<!-- <div class="comments"> -->
+          
+    <!-- <div class="clear"></div> -->
+    <div class="reviews col-xs-10 col-xs-offset-1">
+    <!-- <div class="comments"> -->
 
-<!--   <h1 class="comments pull-left">Comments</h1> -->
-  <div class="place-title">
-  <h1>Ratings and Reviews</h1>
+    <!--   <h1 class="comments pull-left">Comments</h1> -->
+      <div class="place-title">
+      <h1>Ratings and Reviews</h1>
+        </div>
+        <hr />
+      <br class="clr"/>
+
+        <div class="place-booyah-box col-xs-12"> 
+    <!--   <div class="clear"></div> -->
+      <div class="col-xs-10 col-xs-offset-1"></div>
+    <% @place.comments.each do |comment| %>
+      <div class="col-xs-12 col-sm-6">
+        <blockquote>
+          <% if comment.humanized_rating.present? %> 
+            <% comment.humanized_rating.times do %>
+              <%= content_tag :div, class: 'gem-image-inline' do %>
+                <img src='/assets/gem2.png' alt="gem" height="22" width="22">
+              <% end %>
+            <% end %>
+          <% end %> 
+             - <%= comment.message %>
+          <small><%= comment.user.email %></small>
+        </blockquote>
+      </div>
+
+    <% end %>
+    <br/>
+    <br/>
+
+      <br class="clr"/>
+    </div>
+    <hr/>
+    <div class="place-title">
+      <h1>Photos</h1>
     </div>
     <hr />
-  <br class="clr"/>
+    <br class="clr"/>
 
-    <div class="place-booyah-box col-xs-12"> 
-  <div class="clear"></div>
-  <div class="col-xs-10 col-xs-offset-1"></div>
-<% @place.comments.each do |comment| %>
-  <div class="col-xs-12 col-sm-6">
-    <blockquote>
-      <% if comment.humanized_rating.present? %> 
-        <% comment.humanized_rating.times do %>
-          <%= content_tag :div, class: 'gem-image-inline' do %>
-            <img src='/assets/gem2.png' alt="gem" height="22" width="22">
-          <% end %>
-        <% end %>
+    <div class="col-xs-10 col-xs-offset-1"></div>
+      <% @place.photos.each do |photo| %>
+        <div class="col-xs-12 col-sm-4">
+          <div class="place-photo">
+            <%= image_tag photo.picture, :class => 'img-responsive' %> 
+            <%= photo.caption %>
+          </div>
+        </div>
+
       <% end %> 
-         - <%= comment.message %>
-      <small><%= comment.user.email %></small>
-    </blockquote>
   </div>
-
-<% end %>
-<br/>
-<br/>
-
-  <br class="clr"/>
-</div>
-<hr/>
-<div class="place-title">
-  <h1>Photos</h1>
-    </div>
-    <hr />
-  <br class="clr"/>
-
-  <div class="col-xs-10 col-xs-offset-1"></div>
- <% @place.photos.each do |photo| %>
- <div class="col-xs-12 col-sm-4">
-    <div class="place-photo">
-      <%= image_tag photo.picture, :class => 'img-responsive' %> 
-      <%= photo.caption %>
-    </div>
-  </div>
-
-  <% end %> 
-  </div>
-  </div>
-  </div>
-   <div class="clear"></div>
+       <div class="clear"></div>
