--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -226,23 +226,12 @@ a:hover {
 
 h2 { padding-top: 20px; }
 h2:first-of-type { padding-top: 0; }
-ul { padding: 0; }
 
-
-div.pagination ul {
-  display: inline-block;
-  *display: inline;
-  /* IE7 inline-block hack */
-
-  *zoom: 1;
-  text-align: center;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+ul { 
+  padding: 0;
+  margin-bottom: 0;
 }
+
 .pagination li {
   display: inline;
 }
@@ -405,8 +394,4 @@ p {
   display: inline-block;
   height: 22px;
   width: 22px;
-}
-
-div.bulletin-board.col-xs-10.col-xs-offset-1 {
-
 }
