--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,91 +1,91 @@
- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <%= image_tag 'slider1.jpg', class: 'img-responsive' %>
-      <div class="carousel-caption">
-        Big Sur Beaches
-      </div>
-    </div>
-    <div class="item">
-      <%= image_tag 'slider3.jpg', class: 'img-responsive' %>
-      <div class="carousel-caption">
-        Monterey Bay Aquarium
-      </div>
-    </div>
-    <div class="item">
-      <%= image_tag 'slider5.jpg', class: 'img-responsive'  %>
-      <div class="carousel-caption">
-        Redwood Forests
-      </div>
-  </div>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
 
-  <!-- Controls -->
-<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-  <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</div>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <%= image_tag 'slider1.jpg', class: 'img-responsive' %>
+          <div class="carousel-caption">
+            Big Sur Beaches
+          </div>
+        </div>
+        <div class="item">
+          <%= image_tag 'slider3.jpg', class: 'img-responsive' %>
+          <div class="carousel-caption">
+            Monterey Bay Aquarium
+          </div>
+        </div>
+        <div class="item">
+          <%= image_tag 'slider5.jpg', class: 'img-responsive'  %>
+          <div class="carousel-caption">
+            Redwood Forests
+          </div>
+      </div>
 
-<div class="clear"></div>
-  <div class="booyah-box col-xs-10 col-xs-offset-1"> 
-  <h1>The Best of Monterey | <small>On and Off the Beaten Path</small></h1>
-  <br class="clr"/>
-<!-- <hr /> -->
-<!-- Places -->
-<% @places.each do |place| %>
-<div class="places-index col-xs-12">
-<hr />
-	<div class="col-sm-8 col-xs-12">
-	  <h2><%= link_to place.name, place_path(place) %></h2>
-	  <br />
-	  <i><%= place.address %></i>
-	  <p><%= place.description %></p>
-    <% if place.user.present? %>
-    <small><%= place.user.email %></small>
+      <!-- Carousel Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div> <!--end slide wrapper-->
+    </div> <!-- end carousel -->
+
+    <div class="clear"></div>
+    <div class="booyah-box col-xs-10 col-xs-offset-1"> 
+      <h1>The Best of Monterey | <small>On and Off the Beaten Path</small></h1>
+      <br class="clr"/>
+    <!-- <hr /> -->
+    <!-- Places -->
+    <% @places.each do |place| %>
+    <div class="places-index col-xs-12">
+    <hr />
+    	<div class="col-sm-8 col-xs-12">
+    	  <h2><%= link_to place.name, place_path(place) %></h2>
+    	  <br />
+    	  <i><%= place.address %></i>
+    	  <p><%= place.description %></p>
+        <% if place.user.present? %>
+        <small><%= place.user.email %></small>
+        <% end %>
+
+        <% if place.comments.present? %>
+      		<blockquote>
+        	  <% if place.comments.first.humanized_rating.present? %>
+          		<% place.comments.first.humanized_rating.times do %>
+                <%= content_tag :div, class: 'gem-image-inline' do %>
+                <img src='/assets/gem2.png' alt="gem" height="22" width="22">
+                <% end %>
+              <% end %>
+        	  <% end %>
+              - <%= place.comments.first.message %>
+              <small><%= place.comments.first.user.email %></small>
+      	    </blockquote>
+       <% end %>
+    	 </div>
+    	  <% if place.photos.last.present? && place.photos.last.picture.present? %>
+    	  <div class="col-sm-4 col-xs-12">
+    	  <div class="index-photoframe">
+    	  <%= image_tag place.photos.last.picture %>
+    	  </div>
+    	  </div>
+
+    	  <% end %> 
+    </div>  <!-- end place listings -->
     <% end %>
-
-    <% if place.comments.present? %>
-  		<blockquote>
-    	  <% if place.comments.first.humanized_rating.present? %>
-      		<% place.comments.first.humanized_rating.times do %>
-            <%= content_tag :div, class: 'gem-image-inline' do %>
-            <img src='/assets/gem2.png' alt="gem" height="22" width="22">
-            <% end %>
-          <% end %>
-    	  <% end %>
-          - <%= place.comments.first.message %>
-          <small><%= place.comments.first.user.email %></small>
-  	    </blockquote>
-   <% end %>
-	 </div>
-	  <% if place.photos.last.present? && place.photos.last.picture.present? %>
-	  <div class="col-sm-4 col-xs-12">
-	  <div class="index-photoframe">
-	  <%= image_tag place.photos.last.picture %>
-	  </div>
-	  </div>
-
-	  <% end %> 
-</div> 
-<% end %>
-</div>
-<div class="clear"></div>
-<div class="pagination-centered">
-  <ul>
-<li><%= will_paginate @places %></li>
-  </ul>
-</div>
- <div class="clear"></div> 
+    </div> <!-- end booyah box -->
+    <div class="clear"></div>
+    <div class="pagination-centered">
+      <ul>
+    <li><%= will_paginate @places %></li>
+      </ul>
+    </div>
