Edited text on maps page

--- a/app/views/places/map.html.erb
+++ b/app/views/places/map.html.erb
@@ -61,11 +61,11 @@ function initMap() {
 <br/>
 <br/>
   <p>
-  With stunning coastlines and sweeping vistas, world-class golf courses, and gourmet cuisine-- there's no shortage of things to do. Don't forget to check out some of these hidden gems along the way. Need a sandwich for your hike? A fun and relaxing bar to play a game of darts? We'll help you find what you need.
+  Monterey County has a little something for everyone. Whether it is stunning coastlines with sweeping vistas or dining on delicious, locally-sourced cuisine, there is no shortage of treasures to be discovered. Come exploring with us and find out for yourself!
     </p>
   <br/>
   <p>
-  And if you don't see your place here or there's place that you'd like to add, contribute to Gemster and <%= link_to 'create a new place', new_place_path %>.
+  And if you don't see your favorite place here and there is a place that you would like to add, contribute to Gemster by <%= link_to 'creating a new place', new_place_path %>.
 </p>
 </div> 
 
